--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <link rel="preload" href="/fonts/Etna.woff2" as="font" type="font/woff2" crossorigin="anonymous" /> -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="public/styles.css">
 </head>
 <style>
     /*    media big to small first = [933] */
@@ -106,7 +106,7 @@
             <div class="hidden flex-1/2 medic:block ">
                 <div class="flex items-center justify-center">
                     <div class=" medic:w-[320px] w-[250px] medic:h-[320px] h-[300px] absolute z-1">
-                        <img src="/assets/img/1752798249832.jpg" alt="" class="w-full h-full">
+                        <img src="assets/img/1752798249832.jpg" alt="" class="w-full h-full">
 
                     </div>
                     <div
@@ -126,35 +126,35 @@
             class="bg-[#0c0F14]  flex-row place-content-center hidden medic:flex gap-2 medic:gap-0 h-[135px]">
             <div
                 class="ball1 ghostbreak:w-[100px] w-[80px] ghostbreak:h-[100px] h-[80px] bg-[#D9D9D9] rounded-full relative -left-0 medic:-left-40 flex items-center justify-center">
-                <img src="/assets/icons/html5-brands-solid-full.svg" alt=""
+                <img src="assets/icons/html5-brands-solid-full.svg" alt=""
                     class="ghostbreak:h-[80px] h-[50px]  ghostbreak:w-[80px] w-[50px]">
             </div>
             <div
                 class="ball2 ghostbreak:w-[100px] w-[80px] ghostbreak:h-[100px] h-[80px] bg-[#D9D9D9] rounded-full -top-0  medic:-top-20 relative -left-0 medic:-left-12 flex  items-center justify-center">
-                <img src="/assets/icons/icons8-javascript.svg" alt=""
+                <img src="assets/icons/icons8-javascript.svg" alt=""
                     class="ghostbreak:h-[80px] h-[50px]  ghostbreak:w-[80px] w-[50px]">
             </div>
             <div
                 class="ball3 ghostbreak:w-[100px] w-[80px] ghostbreak:h-[100px] h-[80px] bg-[#D9D9D9] rounded-full relative medic:left-13  left-0 flex  items-center justify-center">
 
-                <img src="/assets/icons/css3-alt-brands-solid-full.svg" alt=""
+                <img src="assets/icons/css3-alt-brands-solid-full.svg" alt=""
                     class="ghostbreak:h-[80px] h-[50px]  ghostbreak:w-[80px] w-[50px]">
             </div>
             <div
                 class="ball4 ghostbreak:w-[100px] w-[80px] ghostbreak:h-[100px] h-[80px] bg-[#D9D9D9] rounded-full relative medic:-left-12 medic:top-35 -left-0 top-0 flex  items-center justify-center">
 
-                <img src="/assets/icons/icons8-tailwind-css.svg" alt=""
+                <img src="assets/icons/icons8-tailwind-css.svg" alt=""
                     class="ghostbreak:h-[80px] h-[50px]  ghostbreak:w-[80px] w-[50px]">
             </div>
             <div
                 class="ball5 ghostbreak:w-[100px] w-[80px] ghostbreak:h-[100px] h-[80px] bg-[#D9D9D9] rounded-full relative medic:left-12 medic:-top-20 left-0 -top-0 flex  items-center justify-center">
 
-                <img src="/assets/icons/git-alt-brands-solid-full.svg" alt=""
+                <img src="assets/icons/git-alt-brands-solid-full.svg" alt=""
                     class="ghostbreak:h-[80px] h-[50px]  ghostbreak:w-[80px] w-[50px]">
             </div>
             <div
                 class="ball6  ghostbreak:w-[100px] w-[80px] ghostbreak:h-[100px] h-[80px] bg-[#D9D9D9] rounded-full relative medic:left-40  left-0 flex  items-center justify-center">
-                <img src="/assets/icons/github-brands-solid-full.svg" alt=""
+                <img src="assets/icons/github-brands-solid-full.svg" alt=""
                     class="ghostbreak:h-[80px] h-[50px]  ghostbreak:w-[80px] w-[50px]">
             </div>
         </div>
@@ -168,18 +168,18 @@
                             class="flex-row place-content-center hidden tiny:flex  medic:hidden  gap-2 medic:gap-0 h-[135px]">
                             <div
                                 class="ball1 ghostbreak:w-[100px]  tiny:w-[80px] w-[60px] ghostbreak:h-[100px] tiny:h-[80px] h-[60px] bg-[#D9D9D9] rounded-full relative -left-0 medic:-left-40 flex items-center justify-center">
-                                <img src="/assets/icons/html5-brands-solid-full.svg" alt=""
+                                <img src="assets/icons/html5-brands-solid-full.svg" alt=""
                                     class="ghostbreak:h-[80px] h-[50px]  ghostbreak:w-[80px] w-[50px]">
                             </div>
                             <div
                                 class="ball2 ghostbreak:w-[100px] tiny:w-[80px] w-[60px] ghostbreak:h-[100px] tiny:h-[80px] h-[60px] bg-[#D9D9D9] rounded-full -top-0  medic:-top-20 relative -left-0 medic:-left-12 flex  items-center justify-center">
-                                <img src="/assets/icons/icons8-javascript.svg" alt=""
+                                <img src="assets/icons/icons8-javascript.svg" alt=""
                                     class="ghostbreak:h-[80px] h-[50px]  ghostbreak:w-[80px] w-[50px]">
                             </div>
                             <div
                                 class="ball3 ghostbreak:w-[100px] tiny:w-[80px] w-[60px] ghostbreak:h-[100px] tiny:h-[80px] h-[60px] bg-[#D9D9D9] rounded-full relative medic:left-13  left-0 flex  items-center justify-center">
 
-                                <img src="/assets/icons/css3-alt-brands-solid-full.svg" alt=""
+                                <img src="assets/icons/css3-alt-brands-solid-full.svg" alt=""
                                     class="ghostbreak:h-[80px] h-[50px]  ghostbreak:w-[80px] w-[50px]">
                             </div>
                         </div>
@@ -205,18 +205,18 @@
                             class="flex-row place-content-center  hidden tiny:flex   medic:hidden  gap-2 medic:gap-0 h-[135px]">
                             <div
                                 class="ball1 ghostbreak:w-[100px] tiny:w-[80px] w-[60px] ghostbreak:h-[100px] tiny:h-[80px] h-[60px] bg-[#D9D9D9] rounded-full relative -left-0 medic:-left-40 flex items-center justify-center">
-                                <img src="/assets/icons/icons8-tailwind-css.svg" alt=""
+                                <img src="assets/icons/icons8-tailwind-css.svg" alt=""
                                     class="ghostbreak:h-[80px] h-[50px]  ghostbreak:w-[80px] w-[50px]">
                             </div>
                             <div
                                 class="ball2 ghostbreak:w-[100px]  tiny:w-[80px] w-[60px] ghostbreak:h-[100px] tiny:h-[80px] h-[60px] bg-[#D9D9D9] rounded-full -top-0  medic:-top-20 relative -left-0 medic:-left-12 flex  items-center justify-center">
-                                <img src="/assets/icons/git-alt-brands-solid-full.svg" alt=""
+                                <img src="assets/icons/git-alt-brands-solid-full.svg" alt=""
                                     class="ghostbreak:h-[80px] h-[50px]  ghostbreak:w-[80px] w-[50px]">
                             </div>
                             <div
                                 class="ball3 ghostbreak:w-[100px]  tiny:w-[80px] w-[60px] ghostbreak:h-[100px] tiny:h-[80px] h-[60px] bg-[#D9D9D9] rounded-full relative medic:left-13  left-0 flex  items-center justify-center">
 
-                                <img src="/assets/icons/github-brands-solid-full.svg" alt=""
+                                <img src="assets/icons/github-brands-solid-full.svg" alt=""
                                     class="ghostbreak:h-[80px] h-[50px]  ghostbreak:w-[80px] w-[50px]">
                             </div>
                         </div>
@@ -249,7 +249,7 @@
                 <div class="items-center justify-center hidden tiny:flex pe-4 flex-4/6">
                     <div
                         class="bg-[#D9D9D9] rounded-full  w-[70px] h-[70px] tiny:w-[100px] tiny:h-[100px] flex items-center justify-center ">
-                        <img src="/assets/icons/graduation-cap-solid-full.svg"
+                        <img src="assets/icons/graduation-cap-solid-full.svg"
                             class="tiny:h-[50px] tiny:w-[50px] h-[40px] w-[40px] " alt="">
                     </div>
                 </div>
@@ -285,7 +285,7 @@
             <div class="flex flex-wrap gap-1 ps-12">
                 <div class="w-full cards basis-[90%]  tiny:basis-[47%] medic:basis-[32%] ">
                     <div class="w-full h-48 overflow-hidden">
-                        <img src="/assets/img/Untitled design.jpg" class="object-cover w-full h-full" alt="">
+                        <img src="assets/img/Untitled design.jpg" class="object-cover w-full h-full" alt="">
                     </div>
                     <h1 class="pt-4 text-xl font-medium text-white"><span>Portfolio Website</span></h1>
                     <h2 class="pb-2 text-sm text-gray-500 font-display"><span>HTML, CSS, Javascript</span></h2>
@@ -293,7 +293,7 @@
                 </div>
                 <div class="w-full cardsbasis-[90%]  tiny:basis-[47%] medic:basis-[32%] ">
                     <div class="w-full h-48 overflow-hidden">
-                        <img src="/assets/img/1752798249832.jpg" class="object-cover w-full h-full" alt="">
+                        <img src="assets/img/1752798249832.jpg" class="object-cover w-full h-full" alt="">
                     </div>
                     <h1 class="pt-4 text-xl font-medium text-white"><span>Portfolio Website</span></h1>
                     <h2 class="pb-2 text-sm text-gray-500 font-display"><span>TailwindCSS, CSS, MongoDB</span></h2>
@@ -301,7 +301,7 @@
                 </div>
                 <div class="w-full cardsbasis-[90%]  tiny:basis-[47%] medic:basis-[32%] ">
                     <div class="w-full h-48 overflow-hidden">
-                        <img src="/assets/img/1752798249832.jpg" class="object-cover w-full h-full" alt="">
+                        <img src="assets/img/1752798249832.jpg" class="object-cover w-full h-full" alt="">
                     </div>
                     <h1 class="pt-4 text-xl font-medium text-white"><span>Portfolio Website</span></h1>
                     <h2 class="pb-2 text-sm text-gray-500 font-display"><span>TailwindCSS, CSS, MongoDB</span></h2>
@@ -309,7 +309,7 @@
                 </div>
                  <div class="w-full cardsbasis-[90%]  tiny:basis-[47%] medic:basis-[32%] ">
                     <div class="w-full h-48 overflow-hidden">
-                        <img src="/assets/img/1752798249832.jpg" class="object-cover w-full h-full" alt="">
+                        <img src="assets/img/1752798249832.jpg" class="object-cover w-full h-full" alt="">
                     </div>
                     <h1 class="pt-4 text-xl font-medium text-white"><span>Portfolio Website</span></h1>
                     <h2 class="pb-2 text-sm text-gray-500 font-display"><span>TailwindCSS, CSS, MongoDB</span></h2>
