--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
             clip-path: polygon(0 0, 0% 0%, 100% 0, 100% 100%, 0% 100%);
         }
     }
+    @font-face {
+  font-family: 'Etna';
+  src: url('/fonts/Etna.woff2') format('woff2');
+  font-display: swap; /* critical for performance */
+  font-weight: 10;
+  font-style: normal;
+}
 </style>
 
 <body class="bg-[#0C0F14]">
