--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         <p class="text-sm font-light text-white smile:text-xl smile:ps-10 ps-4">
                             Git<br>
                             Github<br>
-                            Deepseak Ai<br>
+                            NodeJs<br>
                             ChatGPT Ai<br>
                             VsCode<br>
                         </p>
