--- a/index.html
+++ b/index.html
@@ -522,26 +522,25 @@
                         <picture>
                             <!-- Modern Browser (WebP) -->
                             <source src="
-                            assets/img/HTMLCERT-400.webp 400w,
-                            assets/img/HTMLCERT-800.webp 800w,
-                            assets/img/HTMLCERT.webp 1920w"
+                            assets/img/FRONTENDCERT-400.webp 400w,
+                            assets/img/FRONTENDCERT-800.webp 800w,
+                            assets/img/FRONTENDCERT.webp 1920w"
                             sizes="(max-width: 600px) 400px
                                     (max-width: 1200px) 800px, 1920px"
                             type="image/webp"> 
                             <!-- Fallback (Png) -->
                             <source src="
-                            assets/img/HTMLCERT-400.png 400w,
-                            assets/img/HTMLCERT-800.png 800w,
-                            assets/img/HTMLCERT.png 1920w"
+                            assets/img/FRONTENDCERT-400.png 400w,
+                            assets/img/FRONTENDCERT-800.png 800w,
+                            assets/img/FRONTENDCERT.png 1920w"
                             sizes="(max-width: 600px) 400px
                                     (max-width: 1200px) 800px, 1920px"
                             type="image/png">
-                             <img src="/assets/img/HTMLCERT.webp" class="object-contain w-full h-auto" width="1920" height="1087" alt="" decoding="async" loading="lazy">
+                             <img src="/assets/img/FRONTENDCERT.webp" class="object-contain w-full h-auto" width="1920" height="1087" alt="" decoding="async" loading="lazy">
                         </picture>
                     </div>
-                    <h1 class="pt-4 text-lg font-PT font-semibold text-white"><span>Mastering HTML5: From Beginner to
-                            Advanced
-                            2025</span></h1>
+                    <h1 class="pt-4 text-lg font-PT font-semibold text-white"><span>The Front-End Web Developer Bootcamp: HTML, CSS, JS & React
+                            </span></h1>
                     <h2 class="pb-2 text-sm text-gray-500 font-display"><span>Mehmood Khalil, Zaheer Irshad,
                             -Udemy</span></h2>
                 </div>
