--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                             <source type="image/webp">
 
                             <!-- Fallback for browsers that don’t support WebP -->
-                            <img src="assets/img/1752798249832.webp" alt="" class="w-full h-full" fetchpriority="high"
+                            <img src="assets/img/1752798249832.webp" alt="" id="myImage" class="w-full h-full" fetchpriority="high"
                                 loading="eager">
                         </picture>
 
